refactor: modernize Java code with switch expressions and pattern matching
- Replace legacy switch statements with switch expressions throughout
- Use pattern matching for instanceof checks in GameTree, BestResponse
- Replace null/collection initializations with List.of() and diamond operators
- Use Objects.equals() for string comparisons to avoid reference equality bugs
- Minor cleanups: final fields, StringBuilder, printf over println+format, 1F over Float.valueOf(1)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>